# emb-sys

./: README.md
docker-compose/: docker-compose.yaml
docker-compose/ha/: haproxy.conf
docker-compose/scripts/: ENV  dump_db.sh
kicad/: esp.kicad_pcb  esp.kicad_prl  esp.kicad_pro  esp.kicad_sch  fp-info-cache  fp-lib-table
kicad/esp/kicad/: esp.kicad_prl  esp.kicad_pro
kicad/wemos-d1-mini-kicad/modules/wemos-d1-mini.pretty/: wemos-d1-mini-with-pin-header.kicad_mod
platformio/: Makefile  Readme.md  platformio.ini  test.py  vedirect.md  victron.out  victron_single.out
platformio/src/: config1.h  main.cpp  vedirect.h
rust-backend/: Cargo.toml  Rocket.toml
rust-backend/src/: main.rs  victron.rs
