[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
serde_json = "*"
[dependencies.rocket_db_pools]
version = "=0.1.0-rc.4"
features = ["sqlx_postgres"]
[dependencies.sqlx]
features = ["chrono"]
version = "*"
